<resources>
    <string name="app_name">MiniFood</string>
    <string name="UserName">用户昵称:</string>
    <string name="Password">密码:</string>
    <string name="Login">登陆</string>
    <string name="ForgetPassword">忘记密码</string>
    <string name="RegisterUser">注册用户</string>
    <string name="ConfirmPassword">确认密码:</string>
    <string name="PasswordMessage">密码提示:</string>
    <string name="TelephoneNumber">电话号码:</string>
    <string name="Address">送餐地址:</string>
    <string name="Dishes">菜单</string>
    <string name="modifyUserMsg">修改个人信息</string>
</resources>