<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCenterActivity">
    
<TextView
    android:id="@+id/user_center_textViewName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/UserName" />
<EditText
    android:id="@+id/user_center_Name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_textViewName"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:text="" />

<TextView
    android:id="@+id/user_center_textViewPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_Name"
    android:layout_marginTop="5dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/Password" />
<EditText
    android:id="@+id/user_center_Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_textViewPassword"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:ems="10"
    android:inputType="numberPassword" />

<TextView
    android:id="@+id/user_center_textViewConfirmPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_Password"
    android:layout_marginTop="5dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/ConfirmPassword" />
<EditText
    android:id="@+id/user_center_ConfirmPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_textViewConfirmPassword"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:ems="10"
    android:inputType="numberPassword" />

<TextView
    android:id="@+id/user_center_textViewTelephoneNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_ConfirmPassword"
    android:layout_marginTop="5dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/TelephoneNumber" />
<EditText
    android:id="@+id/user_center_TelephoneNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_textViewTelephoneNumber"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:ems="10"/>

<TextView
    android:id="@+id/user_center_textViewAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_TelephoneNumber"
    android:layout_marginTop="5dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/Address" />
<EditText
    android:id="@+id/user_center_Address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/user_center_textViewAddress"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:ems="10"
    android:inputType="" />

<Button
    android:id="@+id/user_center_modifyUserMsg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:text="@string/modifyUserMsg" />

</RelativeLayout>